fixed full screen overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,7 @@ body {
 
 /* Full Screen Container */
 .App {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   overflow: hidden;
 }
 
